--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "Atom-Simulation",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "~2.1"
+    "jquery": "~2.1",
+    "requirejs": "~2.1"
   },
   "private": true
 }
