--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "~2.1",
-    "requirejs": "~2.1"
+    "requirejs": "~2.1",
+    "jquery.hotkeys": "jeresig/jquery.hotkeys#~0.1.0"
   },
   "private": true
 }
