Modified jquery.hotkeys.js jquery plugin to make it AMD compliant (so that it works with require.js). Added exception for jquery.hotkeys.js to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .idea
 AtomSimulation.iml
-bower_components
+
+bower_components/*
+!bower_components/jquery.hotkeys
+
+bower_components/jquery.hotkeys/*
+!bower_components/jquery.hotkeys/jquery.hotkeys.js
