--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "~2.1",
     "requirejs": "~2.1",
-    "jquery.hotkeys": "jeresig/jquery.hotkeys#~0.1.0"
+    "jquery.hotkeys": "jeresig/jquery.hotkeys#~0.1.0",
+    "bootstrap": "~3.3.1"
   },
   "private": true
 }
